--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -155,16 +155,15 @@
                             <ul class="dropdown-menu dropdown-inverse " style="right: -10px; display: none;">
                                 <li class="c-holder">
                                     <ul class="nav shopCarMenu">
-                                        <li role="presentation" class="shop-card">
+                                        <!-- <li role="presentation" class="shop-card">
                                             <div class="shop-img">
-                                                <!----><img src="https://oss.static.nubia.cn/active/5c37f65d4e1ae1.png" alt="" class="shop-img"></div>
+                                                <img src="https://oss.static.nubia.cn/active/5c37f65d4e1ae1.png" alt="" class="shop-img"></div>
                                             <div class="shop-detail">
                                                 <p class="shop-name">
-                                                    <!---->
-                                                    <!----><span>红魔Mars( 6GB+64GB 烈焰红)</span></p>
+                                                    <span>红魔Mars( 6GB+64GB 烈焰红)</span></p>
                                                 <p class="shop-price shop-newPrice">¥1899<span class="shop-oldPrice">¥2699</span><i class="shop-count">×2</i></p>
                                             </div>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                     <div role="presentation" class="shop-card shop-card-totle">
                                         <p class="shop-totle">合计:<span class="shop-totle-num">¥16392</span></p> <button class="shop-buy"><a href="./cart.html">去购物车</a></button></div>
@@ -176,7 +175,7 @@
                             <ul class="dropdown-menu dropdown-inverse">
                                 <li class="c-holder">
                                     <ul class="nav">
-                                        <li role="presentation" class="unloginNav"><button type="button" style="font-size: 14px; color: rgb(255, 255, 255);">立即登录</button>
+                                        <li role="presentation" class="unloginNav"><button style="font-size: 14px; color: rgb(255, 255, 255);">立即登录</button>
                                             <p>没有账号？<a href="../html/regest-login.html">立即注册</a></p>
                                         </li>
                                         <li role="presentation"><a href="https://www.nubia.com/order/member"><i class="glyphicon glyphicon-home mhm"></i>个人中心</a></li>
@@ -294,7 +293,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="p-0">
+                                        <!-- <tr class="p-0">
                                             <td><img src="https://oss.static.nubia.cn/active/5c37f65d4e1ae1.png?imageView2/2/w/100/h/100/format/png"></td>
                                             <td class="productname">
                                                 <a target="_blank" productid="1104" href="/product/s/1104" class="pdt-title">红魔Mars( 8GB+128GB 曜石黑)</a>
@@ -305,7 +304,7 @@
                                             </td>
                                             <td class="sum" style="line-height: 1.8;">￥12594.00</td>
                                             <td><a title="删除" class="cart-close close">×</a></td>
-                                        </tr>
+                                        </tr> -->
                                     </tbody>
                                     <tfoot>
                                         <tr>
