--- a/src/html/descript.html
+++ b/src/html/descript.html
@@ -33,6 +33,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <script src="../js/description.js"></script>
     <script src="../js/cookie.js"></script>
+    <script src="../js/scale.js"></script>
 
 
 </head>
@@ -161,16 +162,16 @@
                             <ul class="dropdown-menu dropdown-inverse " style="right: -10px; display: none;">
                                 <li class="c-holder">
                                     <ul class="nav shopCarMenu">
-                                        <li role="presentation" class="shop-card">
+                                        <!-- <li role="presentation" class="shop-card">
                                             <div class="shop-img">
-                                                <!----><img src="http://oss.static.nubia.cn/active/5c37f65d4e1ae1.png" alt="" class="shop-img"></div>
+                                                <img src="http://oss.static.nubia.cn/active/5c37f65d4e1ae1.png" alt="" class="shop-img"></div>
                                             <div class="shop-detail">
                                                 <p class="shop-name">
-                                                    <!---->
-                                                    <!----><span>红魔Mars( 6GB+64GB 烈焰红)</span></p>
+                                                    
+                                                    <span>红魔Mars( 6GB+64GB 烈焰红)</span></p>
                                                 <p class="shop-price shop-newPrice">¥1899<span class="shop-oldPrice">¥2699</span><i class="shop-count">×2</i></p>
                                             </div>
-                                        </li>
+                                        </li> -->
                                     </ul>
                                     <div role="presentation" class="shop-card shop-card-totle">
                                         <p class="shop-totle">合计:<span class="shop-totle-num">¥16392</span></p> <button class="shop-buy"><a href="../html/cart.html">去购物车</a></button></div>
@@ -182,7 +183,7 @@
                             <ul class="dropdown-menu dropdown-inverse">
                                 <li class="c-holder">
                                     <ul class="nav">
-                                        <li role="presentation" class="unloginNav"><button type="button" style="font-size: 14px; color: rgb(255, 255, 255);">立即登录</button>
+                                        <li role="presentation" class="unloginNav"><button style="font-size: 14px; color: rgb(255, 255, 255);">立即登录</button>
                                             <p>没有账号？<a href="../html/regest-login.html">立即注册</a></p>
                                         </li>
                                         <li role="presentation"><a href="//www.nubia.com/order/member"><i class="glyphicon glyphicon-home mhm"></i>个人中心</a></li>
@@ -311,9 +312,6 @@
                                                 </div>
                                                 <a href="javascript:;" id="right" class="control" data-flag="true">&gt;</a>
                                             </div>
-                                            <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-
-                                            <script src="../js/scale.js"></script>
 
                                             <script>
                                                 $(function() {
