--- a/src/js/test.html
+++ b/src/js/test.html
@@ -20,58 +20,25 @@
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <title>Document</title>
-    <style>
-        body {
-            height: 1000px;
-            background: pink;
-        }
-        
-        a {
-            font-size: 30px;
-            color: purple;
-            background-color: yellowgreen;
-        }
-    </style>
 </head>
 
 <body>
-    <a href="https://www.baidu.com">百度</a>
     <script>
-        $(function() {
-            // $(window).blur(function() {
-            //     var blurTime = Date.now();
-            //     console.log("'么么哒 ': blurTime", blurTime)
-            // });
-            // $(window).focus(function() {
-            //     var focusTime = Date.now();
-            //     console.log("'么么哒 ': focusTime", focusTime)
-            //     if (focusTime - blurTime > 5000) {
-            //         alert(`欢迎回来`)
-            //     }
-            // });
+        $(window).blur(function() {
+            var blurTime = Date.now();
+            console.log("'么么哒 ': blurTime", blurTime)
+        });
+        $(window).focus(function() {
+            var focusTime = Date.now();
+            console.log("'么么哒 ': focusTime", focusTime)
+            if (focusTime - blurTime > 5000) {
+                alert(`欢迎回来`)
+            }
+        });
+        $(window).unload(function() {
+            var unloadTime = Date.now();
+            console.log("'么么哒 ': blurTime", unloadTime)
 
-
-
-            //unload() 事件
-            // $(window).unload(function() {
-            //     alert('1');
-            //     var unloadTime = Date.now();
-            //     console.log("'么么哒 ': blurTime", unloadTime)
-            // });
-            // window.onbeforeunload = function() {
-            //     alert(1)
-            // };
-
-            // 下拉刷新
-            $(window).scroll(function() {
-                // console.log("'么么哒 ': $('html,body').scrollTop", $('html,body').scrollTop())
-                if ($(window).scrollTop() < 0) {
-                    console.log('这是刷新');
-                } else {
-                    console.log('正在下拉...');
-                }
-
-            })
         })
     </script>
 </body>
