--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -175,7 +175,7 @@
                             <ul class="dropdown-menu dropdown-inverse">
                                 <li class="c-holder">
                                     <ul class="nav">
-                                        <li role="presentation" class="unloginNav"><button style="font-size: 14px; color: rgb(255, 255, 255);">立即登录</button>
+                                        <li role="presentation" class="unloginNav"><button type="button" style="font-size: 14px; color: rgb(255, 255, 255);">立即登录</button>
                                             <p>没有账号？<a href="../html/regest-login.html">立即注册</a></p>
                                         </li>
                                         <li role="presentation"><a href="https://www.nubia.com/order/member"><i class="glyphicon glyphicon-home mhm"></i>个人中心</a></li>
