--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -36,7 +36,8 @@
 
 </head>
 
-<body style="padding-top:66px;" <!-- header html article start -->
+<body style="padding-top:66px;" >
+    <!-- header html article start -->
     <header id="header" class="indexheader">
         <nav class="navbar navbar-fixed-top navbar-default">
             <div class="container">
