--- a/src/html/descript.html
+++ b/src/html/descript.html
@@ -33,7 +33,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <script src="../js/description.js"></script>
     <script src="../js/cookie.js"></script>
-    <script src="../js/scale.js"></script>
 
 
 </head>
@@ -305,13 +304,14 @@
                                                         <li><img src="https://oss.static.nubia.cn/active/5caab828c31f316.png" alt=""></li>
                                                         <li><img src="https://oss.static.nubia.cn/active/5caab828be8847.png" alt=""></li>
                                                         <li><img src="https://oss.static.nubia.cn/active/5caab828c31f316.png" alt=""></li>
-                                                        <li><img src="https://oss.static.nubia.cn/active/5caab828c31f316.png" alt=""></li>
-                                                        <li><img src="https://oss.static.nubia.cn/active/5caab828be8847.png" alt=""></li>
                                                     </ul>
 
                                                 </div>
                                                 <a href="javascript:;" id="right" class="control" data-flag="true">&gt;</a>
                                             </div>
+                                            <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+
+                                            <script src="../js/scale.js"></script>
 
                                             <script>
                                                 $(function() {
